crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__collapse_groups__collapse_groups-15.snap
---
source: crates/oxvg_optimiser/src/jobs/collapse_groups.rs
assertion_line: 502
expression: "test_config(r#\"{ \"collapseGroups\": true }\"#,\nSome(r#\"<svg xmlns=\"http://www.w3.org/2000/svg\">\n    <!-- Preserve only the groups a structural selector actually matches through -->\n    <style>\n        #alpha * rect { fill: green }\n        #beta rect { fill: gold }\n        g &gt; path { fill: red }\n        circle:first-child { fill: blue }\n    </style>\n    <g id=\"alpha\">\n        <g>\n            <rect width=\"1\" height=\"1\"/>\n        </g>\n    </g>\n    <g id=\"beta\">\n        <g>\n            <rect width=\"1\" height=\"1\"/>\n        </g>\n    </g>\n    <g>\n        <g>\n            <path d=\"M0 0\"/>\n        </g>\n    </g>\n    <g>\n        <circle r=\"1\"/>\n    </g>\n    <g>\n        <rect width=\"1\" height=\"1\"/>\n    </g>\n</svg>\"#))?"
---
<svg xmlns="http://www.w3.org/2000/svg">
    <!-- Preserve only the groups a structural selector actually matches through -->
    <style>
        #alpha * rect{fill:green}#beta rect{fill:gold}g>path{fill:red}circle:first-child{fill:#00f}
    </style>
    <g id="alpha">
        <g>
            <rect width="1" height="1"/>
        </g>
    </g>
    <g id="beta">
        <rect width="1" height="1"/>
    </g>
    <g>
        <path d="M0 0"/>
    </g>
    <g>
        <circle r="1"/>
    </g>
    <rect width="1" height="1"/>
</svg>
