crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__collapse_groups__collapse_groups-21.snap
---
source: crates/oxvg_optimiser/src/jobs/collapse_groups.rs
expression: "test_config(r#\"{ \"collapseGroups\": true }\"#,\nSome(r#\"<svg xmlns=\"http://www.w3.org/2000/svg\">\n    <!-- Should preserve groups that a negated relationship depends on -->\n    <style>\n        path:not(g > *) { fill: red }\n    </style>\n    <g>\n        <path d=\"M0 0\"/>\n    </g>\n    <g>\n        <g>\n            <circle r=\"1\"/>\n        </g>\n    </g>\n</svg>\"#))?"
---
<svg xmlns="http://www.w3.org/2000/svg">
    <!-- Should preserve groups that a negated relationship depends on -->
    <style>
        path:not(g>*){fill:red}
    </style>
    <g>
        <path d="M0 0"/>
    </g>
    <circle r="1"/>
</svg>
