crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__collapse_groups__collapse_groups_structural_selectors-10.snap
---
source: crates/oxvg_optimiser/src/jobs/collapse_groups.rs
expression: "test_config(r#\"{ \"collapseGroups\": true }\"#,\nSome(r#\"<svg xmlns=\"http://www.w3.org/2000/svg\">\n    <!-- Should preserve structure for dynamic and conditional rules -->\n    <style>\n        g:hover > path { fill: red }\n        @media screen {\n            g > circle { fill: red }\n        }\n    </style>\n    <g>\n        <path d=\"...\"/>\n    </g>\n    <g>\n        <circle r=\"1\"/>\n    </g>\n    <g>\n        <rect width=\"1\"/>\n    </g>\n</svg>\"#))?"
---
<svg xmlns="http://www.w3.org/2000/svg">
    <!-- Should preserve structure for dynamic and conditional rules -->
    <style>
        g:hover>path{fill:red}@media screen{g>circle{fill:red}}
    </style>
    <g>
        <path d=""/>
    </g>
    <g>
        <circle r="1"/>
    </g>
    <rect width="1"/>
</svg>
