crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__collapse_groups__collapse_groups_structural_selectors-4.snap
---
source: crates/oxvg_optimiser/src/jobs/collapse_groups.rs
expression: "test_config(r#\"{ \"collapseGroups\": true }\"#,\nSome(r#\"<svg xmlns=\"http://www.w3.org/2000/svg\">\n    <!-- Should only preserve the nearest anchor of a descendant selector -->\n    <style>\n        g path { fill: red }\n    </style>\n    <g>\n        <g>\n            <path d=\"...\"/>\n        </g>\n    </g>\n</svg>\"#))?"
---
<svg xmlns="http://www.w3.org/2000/svg">
    <!-- Should only preserve the nearest anchor of a descendant selector -->
    <style>
        g path{fill:red}
    </style>
    <g>
        <path d=""/>
    </g>
</svg>
